--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "darkaonline/l5-swagger": "^8.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
+        "laravel/passport": "v11.8.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8"
     },
