--- a/.env.ci
+++ b/.env.ci
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 # database
-DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_HOST=pgsql
+DB_PORT=5432
 DB_DATABASE=test
 DB_USERNAME=root
 DB_PASSWORD=password
